css/master.scss
$navbar-width: 200px;
$black: #666;
$light-black: #999;
$light-grey: rgb(244,244,244);
$grey: #eee;
$white: rgb(250,250,250);
$title-bar-height: 36px;
$control-bar-height: 44px;

html {
  background-color: $white;
  user-select: none;
}

.task {
  display: flex;
  flex-direction: column;
  padding: 30px 40px;
  color: $black;
  border-bottom: solid;
  border-bottom-color: $grey;
  border-bottom-width: 1px;
  border-left: solid;
  border-left-width: 3px;
  border-left-color: $white;
  transition: 0.1s;
}

.task:hover, .task.is-selected {
  background-color: $light-grey;
  border-color: $light-grey;
}

.task:hover .progress::-webkit-progress-bar, .task.is-selected .progress::-webkit-progress-bar {
  background-color: $light-grey;
}

.task.is-selected {
  border-left-color: $black;
}

//This I've tried. Does not work when elements are in more than one category.

// .task.is-selected ~ .is-selected::after {
//   content: '';
//   position: absolute;
//   top: -10px;
//   left: 0;
//   height: 25px;
//   background: $white;
//   width: 100%;
// }

.navigation h1 {
  font-weight: 200;
  padding-left: 30px;
  font-size: 1rem;
  padding: 10px 30px;
  border-left: solid;
  border-width: 3px;
  border-color: $white;
  transition: 0.1s;
  height: $control-bar-height;
}

.navigation h1:hover {
  background-color: $light-grey;
  border-color: $light-grey;
}

.navigation h1.is-active {
  border-color: $black !important;
  background-color: $light-grey;
}

.navigation {
  height: 100%;
  width: $navbar-width;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: $white;
  overflow-x: hidden;
  padding-top: $title-bar-height;
  transition: 0.1s;
  border-right: solid;
  border-width: 1px;
  border-color: $grey;
  -webkit-app-region: drag;
}

.main-frame {
  margin-left: $navbar-width;
  margin-top: $title-bar-height + $control-bar-height;
}

.control-button {
  color: $black;
  margin: 0px;
  padding: 10px;
  padding-left: 20px;
  padding-right: 20px;
  font-weight: 200;
  font-size: 1rem;
  transition: 0.1s;
  // border-right: solid;
  // border-width: 1px;
  // border-color: $grey;
}

.control-button:hover {
  background-color: $grey;
  color: $black;
}

.control-button:active {
  background-color: darken($grey, 8);
}

.controls {
  position: fixed;
  z-index: 3;
  top: 0;
  display: flex;
  width: 100%;
  height: $control-bar-height;
  border-bottom: solid;
  border-width: 1px;
  border-color: $grey;
  margin-left: $navbar-width;
  margin-top: $title-bar-height;
  background-color: $white;
}

.ion-fw {
  display: inline-block;
  width: 1.28571em;
  text-align: center;
}

.row {
  display: flex;
  flex-wrap: nowrap;
  flex-direction: row;
  margin-bottom: 10px;
}

.percent-finished {
  margin-left: auto;
}

.progress {
  border-radius: 0;
  margin: 0 !important;
}

.progress::-webkit-progress-bar {
  background-color: $white;
  border-right: solid;
  border-left: solid;
  border-width: 1px;
  transition: 0.1s;
}

.progress::-webkit-progress-value {
  background-color: $black;
}

.progress-background {
  width: 100%;
  height: 8px;
  position: absolute;
  left: 0;
  top: 0;
  border-bottom: solid;
  border-width: 1px;
  border-color: $black;
}

.progress-background hr {
  position: absolute;
}

.progress-bar {
  position: relative;
}

.task-info > p {
  margin-right: 10px;
}

.ion-arrow-down-c {
  margin-left: -3px;
}

.tabs > ul {
  margin: 0;
}

.tabs > ul > li {
  margin-top: 4px;
}

.tabs li a {
  color: $black !important;
}

.tabs li a:hover {
  border-bottom-color: $black;
}

.tabs li.is-active a {
  border-bottom-color: $black;
}

#addLink {
  margin-left: 10px;
}

.input.is-active, .input.is-focused, .input:active, .input:focus, .textarea.is-active, .textarea.is-focused, .textarea:active, .textarea:focus {
  border-color: $black;
}

.card {
  background-color: $white;
}

.file-input {
  position: absolute;
  width: 0px;
  height: 0px;
  z-index: -1;
}

.title-bar {
  position: fixed;
  height: $title-bar-height;
  top: 0;
  width: 100%;
  z-index: 999;
  background-color: $white;
  -webkit-app-region: drag;
  border-bottom: solid;
  border-bottom-width: 1px;
  border-bottom-color: $grey;
}

.title-bar-button-group {
  display: flex;
  margin-top: 12px;
  margin-left: 12px;
}

.title-bar-button {
  height: 12px;
  width: 12px;
  margin-right: 10px;
  border-radius: 100%;
  background-color: $light-black;
}

